--- a/index.html
+++ b/index.html
@@ -46,27 +46,33 @@
 		</ul>
 	</nav>
 	<section>
-		<article>
-		<figure>
-		<img src="img/computer.png" width="800px" alt="Programación">
-		</figure>
+		<article>		
+		<img id=i1 src="img/computer.png" width="800px" alt="Programación"/>		
 			<h2>Objetivo General - Herramienta OVI</h2>
-		<P id=p1>Brindar una herramienta en línea, de fácil navegabilidad, accesibilidad y respuesta, para quienes deseen consultar sobre los conceptos básicos y las etapas necesarias para el desarrollo de software, a través de contenido escrito y multimedia de confiable y veraz procedencia.</P>
+		<P id=p1>Brindar una herramienta en línea, de fácil navegabilidad, accesibilidad y respuesta, para quienes deseen consultar sobre los conceptos básicos y las etapas necesarias para el desarrollo de software, a través de contenido escrito y multimedia de confiable y veraz procedencia.</P>		
+			<img id=i2 src="img/sanwal.jpg" width="100px" align="left" alt="Fichero"/>			
+		<h4>Pero... Qué es el desarrollo de software?</h4>
+		<p id=p4>Es una buena pregunta para empezar. Podría ser complejo responderla si queremos; sin embargo, el proceso de creación de un programa de esos que a diario usas en tu computador personal, tablet o smartphone, no se diferencia en mucho al emprendimiento de cualquier proyecto en tu vida.<br /> Es claro que existen ciertos pasos pre-establecidos y algunas reglas que pueden hacer la diferencia entre el éxito y el fracaso, pero lo mas importante es la disciplina y organización que tengas. Aquí aprenderás algunos conceptos básicos. Esperamos que despierten tu interés y sigas descubriendo este maravilloso mundo.</p>
 		</article>
+		
+		
+		
 	</section>
 
 <aside>
+	<h3>Sobre Nosotros</h3>
 	<p id=p2>
 		Somos estudiantes de la Universidad Nacional abierta y a distancia - UNAD - y pertenecemos al grupo 47 del curso Diseño de Sitios Web. Si quieres conocer un poco mas sobre nosotros pulsa en el siguiente enlace:
 	</p>
-	<a id=i href="#">Descubre quienes somos</a>
+	<p align="center"><a id=i href="#">Descubre quienes somos</a>
 	
 </aside>
 
-<footer>Universidad Nacional Abierta y a Distancia-UNAD-Diseño de Sitios Web</footer>
+<footer>
+<p id=p3>Universidad Nacional Abierta y a Distancia -UNAD- Diseño de Sitios Web</p>
+<hr color=#F0B429 size="4">
+</footer>
 </DIV>
-
-
 
 </body>
 
