Autores, 1 ra lectura, cambios en css
Página web de autores, realizada la primera lectura incrustada en pdf y
algunos cambios en css.

--- a/autores.html
+++ b/autores.html
@@ -45,25 +45,20 @@
 			</li>
 		</ul>
 	</nav>
-	<section>
-		<article>		
-		<img id=i1 src="img/computer.png" alt="Programación"/>		
-			<h2>Objetivo General - Herramienta OVI</h2>
-		<P id=p1>Brindar una herramienta en línea, de fácil navegabilidad, accesibilidad y respuesta, para quienes deseen consultar sobre los conceptos básicos y las etapas necesarias para el desarrollo de software, a través de contenido escrito y multimedia de confiable y veraz procedencia.</P>		
-			<img id=i2 src="img/sanwal.jpg" alt="Fichero"/>			
-		<h4>Pero... Qué es el desarrollo de software?</h4>
-		<p id=p4>Es una buena pregunta para empezar. Podría ser complejo responderla si queremos; sin embargo, el proceso de creación de un programa de esos que a diario usas en tu computador personal, tablet o smartphone, no se diferencia en mucho al emprendimiento de cualquier proyecto en tu vida.<br /> Es claro que existen ciertos pasos pre-establecidos y algunas reglas que pueden hacer la diferencia entre el éxito y el fracaso, pero lo mas importante es la disciplina y organización que tengas. Aquí aprenderás algunos conceptos básicos. Esperamos que despierten tu interés y sigas descubriendo este maravilloso mundo.</p>
-		</article>		
+	<section id=autores>
+		<aside id=autor1>
+			<img id=i3 src="img/felipe.jpg" alt="Felipe" width="220" />
+			<p id=p6>Nombre: Andrés Felipe Patiño <br />Código: 1054987920<br />Programa: Ingeniería de Sistemas<br />Correo electrónico:pipepatino1@gmail.com<br />Usuario Skype: pipe30052<br />Intereses: Soy un apasionado de las motocicletas y disfruto haciendo largos recorridos (en lo posible con buena compañía), me gusta el cine ciencia ficción y los libros dramáticos. Me gusta el diseño de sitios web y en general todo lo que tenga que ver con la programación. </p>
+		</aside>
+		<aside id=autor2>
+			<img id=i3 src="#" alt="Alex" width="220"/>
+			<p id=p6>Nombre:  <br />Código: <br />Programa: Ingeniería de Sistemas<br />Correo electrónico:<br />Usuario Skype: <br />Intereses:  </p>
+		</aside>
+		<aside id=autor3>
+			<img id=i3 src="#" alt="Andres"/>
+			<p id=p6>Nombre: <br />Código: <br />Programa: Ingeniería de Sistemas<br />Correo electrónico:<br />Usuario Skype: <br />Intereses:  </p>
+		</aside>
 	</section>
-
-<aside id=aside1>
-	<h3>Sobre Nosotros</h3>
-	<p id=p2>
-		Somos estudiantes de la Universidad Nacional abierta y a distancia - UNAD - y pertenecemos al grupo 47 del curso Diseño de Sitios Web. Si quieres conocer un poco mas sobre nosotros pulsa en el siguiente enlace:
-	</p>
-	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a>
-	
-</aside>
 
 <footer>
 <p id=p3>Universidad Nacional Abierta y a Distancia -UNAD- Diseño de Sitios Web</p>
