--- a/etapas.html
+++ b/etapas.html
@@ -5,7 +5,7 @@
 	<meta content="Grupo 47" name="Author"/>
 	<meta content="Desarrollo de software" name="description"/>
 	<meta content="ciclo, etapas, requerimientos, modelos, software" name="keywords"/>
-	<title>OVI Desarrollo Software</title>
+	<title>Etapas software</title>
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css"/>
@@ -22,7 +22,7 @@
 	</header>
 	<nav>
 		<ul id="menu">
-			<li><a href="index.html">INICIO</a></li><!--Por definir los hipervínculos con las otras páginas-->
+			<li><a href="index.html">INICIO</a></li>
 			<li><a href="#">ACADÉMICO</a>
 				<ul>
 					<li><a href="etapas.html">Etapas</a></li>
@@ -47,12 +47,10 @@
 	</nav>
 	<section>
 		<article>		
-		<img id=i1 src="img/computer.png" alt="Programación"/>		
-			<h2>Objetivo General - Herramienta OVI</h2>
-		<P id=p1>Brindar una herramienta en línea, de fácil navegabilidad, accesibilidad y respuesta, para quienes deseen consultar sobre los conceptos básicos y las etapas necesarias para el desarrollo de software, a través de contenido escrito y multimedia de confiable y veraz procedencia.</P>		
-			<img id=i2 src="img/sanwal.jpg" alt="Fichero"/>			
-		<h4>Pero... Qué es el desarrollo de software?</h4>
-		<p id=p4>Es una buena pregunta para empezar. Podría ser complejo responderla si queremos; sin embargo, el proceso de creación de un programa de esos que a diario usas en tu computador personal, tablet o smartphone, no se diferencia en mucho al emprendimiento de cualquier proyecto en tu vida.<br /> Es claro que existen ciertos pasos pre-establecidos y algunas reglas que pueden hacer la diferencia entre el éxito y el fracaso, pero lo mas importante es la disciplina y organización que tengas. Aquí aprenderás algunos conceptos básicos. Esperamos que despierten tu interés y sigas descubriendo este maravilloso mundo.</p>
+		<h3>Etapas en el desarrollo de Software</h3>
+		<p id=p5>Te presentamos el siguiente material de lectura de nuestra autoría apoyado en el recurso: <br/>El ciclo de vida de un sistema de información. Berzal, F. Recuperado de: http://elvex.ugr.es/idbis/db/docs/lifecycle.pdf%20.</p>
+
+		<div align="center"><iframe src="documents/Etapas.pdf" width="750" height="490"></iframe></div>
 		</article>		
 	</section>
 
@@ -61,7 +59,7 @@
 	<p id=p2>
 		Somos estudiantes de la Universidad Nacional abierta y a distancia - UNAD - y pertenecemos al grupo 47 del curso Diseño de Sitios Web. Si quieres conocer un poco mas sobre nosotros pulsa en el siguiente enlace:
 	</p>
-	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a>
+	<p align="center"><a id=i href="#">Descubre quienes somos</a>
 	
 </aside>
 
