--- a/actividades1.html
+++ b/actividades1.html
@@ -23,35 +23,27 @@
 	<nav>
 		<ul id="menu">
 			<li><a href="index.html">INICIO</a></li>
-			<li><a href="#">ACADÉMICO</a>
-				<ul>
-					<li><a href="etapas.html">Etapas</a></li>
-					<li><a href="especificaciones.html">Especificaciones</a></li>
-					<li><a href="modelos.html">Modelos</a></li>
-				</ul>
-			</li>
-			<li><a href="#">MULTIMEDIA</a>
-				<ul>
-					<li><a href="videos.html">Videos</a></li>
-					<li><a href="audios.html">Audios</a></li>		
-				</ul>
-			</li>
-			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
-				<ul>
-					<li><a href="Actividades1.html">Actividad 1</a></li>
-					<li><a href="Actividades2.html">Actividad 2</a></li>
-					<li><a href="Actividades3.html">Actividad 3</a></li>
-				</ul>
-			</li>
+			<li><a href="http://actividadesdesarrollodesoftware.blogspot.com.co/p/blog-page.html" target="_blank">SOPA DE LETRAS</a></li>
+			<li><a href="http://actividadesdesarrollodesoftware.blogspot.com.co/p/blog-page_19.html" target="_blank">CRUCIGRAMA</a></li>
 		</ul>
 	</nav>
 	<section id=principal>
 		<article>		
-		<h3>Etapas en el desarrollo de Software</h3>
-		<p id=p5>Te presentamos el siguiente material de lectura de nuestra autoría apoyado en el recurso: <br/>El ciclo de vida de un sistema de información. Berzal, F. Recuperado de: http://elvex.ugr.es/idbis/db/docs/lifecycle.pdf%20.</p>
-
-		<div align="center"><iframe src="documents/Etapas.pdf" width="750" height="480"></iframe></div>
-		</article>		
+		<h3>QUE ENCONTRARAS...</h3>
+		<p id=p5>En estas actividades de sopa de letras y crucigrama donde podrá reforzar los conocimientos adquiridos durante las lecturas 
+ 		y material multimedia visto en el sitio acerca de etapas de desarrollo de software para que
+  		pueda mostrar los conocimientos aprendidos.</p>
+		</article>	
+		<div id=juego1>
+			<h3>Sopa de letras</h3>
+			<a title="Sopa de letras" href="http://actividadesdesarrollodesoftware.blogspot.com.co/p/blog-page.html" target="_blank"><img id=juego src="img/sopa.jpg" width="350" alt="Sopa de letras" /></a>
+			<p id=p7>Recuperado de: https://pixabay.com/es/sopa-los-tomates-salsa-de-tomate-751623/. Autor: 422737</p>
+		</div>	
+		<div id=juego2>
+			<h3>Crucigrama</h3>
+			<a title="Crucigrama" href="http://actividadesdesarrollodesoftware.blogspot.com.co/p/blog-page_19.html" target="_blank"><img id=juego src="img/crucigrama.jpg" width="350" alt="Crucigrama" /></a>
+			<p id=p7>Recuperado de: https://pixabay.com/es/peri%C3%B3dico-noticias-412452/. Autor: stevepb</p>
+		</div>	
 	</section>
 
 <aside id=aside1>
