--- a/audios.html
+++ b/audios.html
@@ -47,10 +47,11 @@
 	</nav>
 	<section id=principal>
 		<article>		
-		<h3>Etapas en el desarrollo de Software</h3>
-		<p id=p5>Te presentamos el siguiente material de lectura de nuestra autoría apoyado en el recurso: <br/>El ciclo de vida de un sistema de información. Berzal, F. Recuperado de: http://elvex.ugr.es/idbis/db/docs/lifecycle.pdf%20.</p>
+		<h3>Perfil del Programador</h3>
+		<p id=p5>Escucha el siguiente material preparado por un integrante del grupo. Te pondrás a tono con el perfil que debe tener un programador. <br/>Te identificas? No lo dudes mas. Sigue explorando este sitio e iniciate en el mundo del desarrollo de software.</p>
 
-		<div align="center"><iframe src="documents/Etapas.pdf" width="750" height="480"></iframe></div>
+		<div align="center"><audio id="sonido" src="audio/perfil.mp3" controls></audio>
+		</div>
 		</article>		
 	</section>
 
