--- a/autores.html
+++ b/autores.html
@@ -22,7 +22,7 @@
 	</header>
 	<nav>
 		<ul id="menu">
-			<li><a href="index.html">INICIO</a></li><!--Por definir los hipervínculos con las otras páginas-->
+			<li><a href="index.html">INICIO</a></li>
 			<li><a href="#">ACADÉMICO</a>
 				<ul>
 					<li><a href="etapas.html">Etapas</a></li>
@@ -32,15 +32,15 @@
 			</li>
 			<li><a href="#">MULTIMEDIA</a>
 				<ul>
-					<li><a href="#">Videos</a></li>
-					<li><a href="#">Audios</a></li>		
+					<li><a href="videos.html">Videos</a></li>
+					<li><a href="audios.html">Audios</a></li>		
 				</ul>
 			</li>
 			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
 				<ul>
-					<li><a href="#">Actividad 1</a></li>
-					<li><a href="#">Actividad 2</a></li>
-					<li><a href="#">Actividad 3</a></li>
+					<li><a href="Actividades1.html">Actividad 1</a></li>
+					<li><a href="Actividades2.html">Actividad 2</a></li>
+					<li><a href="Actividades3.html">Actividad 3</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -51,12 +51,12 @@
 			<p id=p6>Nombre: Andrés Felipe Patiño <br />Código: 1054987920<br />Programa: Ingeniería de Sistemas<br />Correo electrónico:pipepatino1@gmail.com<br />Usuario Skype: pipe30052<br />Intereses: Soy un apasionado de las motocicletas y disfruto haciendo largos recorridos (en lo posible con buena compañía), me gusta el cine ciencia ficción y los libros dramáticos. Me gusta el diseño de sitios web y en general todo lo que tenga que ver con la programación. </p>
 		</aside>
 		<aside id=autor2>
-			<img id=i3 src="#" alt="Alex" width="220"/>
-			<p id=p6>Nombre:  <br />Código: <br />Programa: Ingeniería de Sistemas<br />Correo electrónico:<br />Usuario Skype: <br />Intereses:  </p>
+			<img id=i3 src="img/Alex.jpg" alt="Alex" width="220"/>
+			<p id=p6>Nombre: Alex Mauricio Ossa <br />Código: 94263380 <br />Programa: Ingeniería de Sistemas<br />Correo electrónico: alex.ossa83@gmail.com<br />Usuario Skype: Alex.nielsen13<br />Intereses: Explorar nuevos conocimientos a través de la lectura que me permiten enriquecer tanto en lo personal como en lo profesional, y así mismo compartir dichos conocimientos con otras personas</p>
 		</aside>
 		<aside id=autor3>
-			<img id=i3 src="#" alt="Andres"/>
-			<p id=p6>Nombre: <br />Código: <br />Programa: Ingeniería de Sistemas<br />Correo electrónico:<br />Usuario Skype: <br />Intereses:  </p>
+			<img id=i3 src="img/andres.jpeg"  alt="Andres" width="220" />
+			<p id=p6>Nombre: Andrés Felipe Pinilla<br />Código: 1088267124 <br />Programa: Ingeniería de Sistemas<br />Correo electrónico: andres-afp@hotmail.com <br />Usuario Skype: andres1989</p>
 		</aside>
 	</section>
 
