--- a/especificaciones.html
+++ b/especificaciones.html
@@ -22,7 +22,7 @@
 	</header>
 	<nav>
 		<ul id="menu">
-			<li><a href="index.html">INICIO</a></li><!--Por definir los hipervínculos con las otras páginas-->
+			<li><a href="index.html">INICIO</a></li>
 			<li><a href="#">ACADÉMICO</a>
 				<ul>
 					<li><a href="etapas.html">Etapas</a></li>
@@ -32,31 +32,36 @@
 			</li>
 			<li><a href="#">MULTIMEDIA</a>
 				<ul>
-					<li><a href="#">Videos</a></li>
-					<li><a href="#">Audios</a></li>		
+					<li><a href="videos.html">Videos</a></li>
+					<li><a href="audios.html">Audios</a></li>		
 				</ul>
 			</li>
 			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
 				<ul>
-					<li><a href="#">Nivel 1</a></li>
-					<li><a href="#">Nivel 2</a></li>
-					<li><a href="#">Nivel 3</a></li>
+					<li><a href="Actividades1.html">Actividad 1</a></li>
+					<li><a href="Actividades2.html">Actividad 2</a></li>
+					<li><a href="Actividades3.html">Actividad 3</a></li>
 				</ul>
 			</li>
 		</ul>
 	</nav>
-	<section>
+	<section id=principal>
 		<article>		
-		
+		<h3>Especificaciones</h3>
+		<p id=p5>Continuando con la introducción al desarrollo de software, aquí tienes una lectura de nuestra autoría sobre la especificación de requisitos de software. Nos apoyamos en el siguiente material: <br/>8 Técnicas de análisis de requerimientos de Software. Castañeda, L.s
+		Tomado de: http://www.pmoinformatica.com/2016/08/tecnicas-analisis-requerimientos.html
+</p>
+
+		<div align="center"><iframe src="documents/especificaciones.pdf" width="750" height="460"></iframe></div>
 		</article>		
 	</section>
 
-<aside>
+<aside id=aside1>
 	<h3>Sobre Nosotros</h3>
 	<p id=p2>
 		Somos estudiantes de la Universidad Nacional abierta y a distancia - UNAD - y pertenecemos al grupo 47 del curso Diseño de Sitios Web. Si quieres conocer un poco mas sobre nosotros pulsa en el siguiente enlace:
 	</p>
-	<p align="center"><a id=i href="#">Descubre quienes somos</a>
+	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a>
 	
 </aside>
 
