--- a/modelos.html
+++ b/modelos.html
@@ -22,7 +22,7 @@
 	</header>
 	<nav>
 		<ul id="menu">
-			<li><a href="index.html">INICIO</a></li><!--Por definir los hipervínculos con las otras páginas-->
+			<li><a href="index.html">INICIO</a></li>
 			<li><a href="#">ACADÉMICO</a>
 				<ul>
 					<li><a href="etapas.html">Etapas</a></li>
@@ -32,31 +32,36 @@
 			</li>
 			<li><a href="#">MULTIMEDIA</a>
 				<ul>
-					<li><a href="#">Videos</a></li>
-					<li><a href="#">Audios</a></li>		
+					<li><a href="videos.html">Videos</a></li>
+					<li><a href="audios.html">Audios</a></li>		
 				</ul>
 			</li>
 			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
 				<ul>
-					<li><a href="#">Nivel 1</a></li>
-					<li><a href="#">Nivel 2</a></li>
-					<li><a href="#">Nivel 3</a></li>
+					<li><a href="Actividades1.html">Actividad 1</a></li>
+					<li><a href="Actividades2.html">Actividad 2</a></li>
+					<li><a href="Actividades3.html">Actividad 3</a></li>
 				</ul>
 			</li>
 		</ul>
 	</nav>
-	<section>
+	<section id=principal>
 		<article>		
-		
+		<h3>Modelos en el desarrollo de Software</h3>
+		<p id=p5>Finalmente tenemos los modelos o si prefieres llamarlos hojas de ruta, usados en el desarrollo de software. Desde luego ha sido de nuestra autoría tomando referencias del siguiente documento:<br/>Modelos de proceso de software
+		Tomado de: http://avellano.usal.es/~mmoreno/ASTema2.pdf
+		</p>
+
+		<div align="center"><iframe src="documents/modelos.pdf" width="750" height="480"></iframe></div>
 		</article>		
 	</section>
 
-<aside>
+<aside id=aside1>
 	<h3>Sobre Nosotros</h3>
 	<p id=p2>
 		Somos estudiantes de la Universidad Nacional abierta y a distancia - UNAD - y pertenecemos al grupo 47 del curso Diseño de Sitios Web. Si quieres conocer un poco mas sobre nosotros pulsa en el siguiente enlace:
 	</p>
-	<p align="center"><a id=i href="#">Descubre quienes somos</a>
+	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a>
 	
 </aside>
 
