--- a/videos.html
+++ b/videos.html
@@ -47,10 +47,10 @@
 	</nav>
 	<section id=principal>
 		<article>		
-		<h3>Etapas en el desarrollo de Software</h3>
-		<p id=p5>Te presentamos el siguiente material de lectura de nuestra autoría apoyado en el recurso: <br/>El ciclo de vida de un sistema de información. Berzal, F. Recuperado de: http://elvex.ugr.es/idbis/db/docs/lifecycle.pdf%20.</p>
+		<h3>Fases diseño de software</h3>
+		<p id=p5>Eres de los que les gusta aprender a través de material multimedia. Si es tu caso, el siguiente video te enseñará de manera muy sencilla las fases en el desarrollo de software.<br/> Está elaborado en una excelente herramienta en línea: Powntoon</p>
 
-		<div align="center"><iframe src="documents/Etapas.pdf" width="750" height="480"></iframe></div>
+		<div align="center"><iframe width="740" height="450" src="https://www.youtube.com/embed/J2JSkioXLdA" frameborder="0" allowfullscreen></iframe></div>
 		</article>		
 	</section>
 
