--- a/index.html
+++ b/index.html
@@ -32,25 +32,26 @@
 			</li>
 			<li><a href="#">MULTIMEDIA</a>
 				<ul>
-					<li><a href="#">Videos</a></li>
-					<li><a href="#">Audios</a></li>		
+					<li><a href="videos.html">Videos</a></li>
+					<li><a href="audios.html">Audios</a></li>		
 				</ul>
 			</li>
 			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
 				<ul>
-					<li><a href="#">Actividad 1</a></li>
-					<li><a href="#">Actividad 2</a></li>
-					<li><a href="#">Actividad 3</a></li>
+					<li><a href="Actividades1.html">Actividad 1</a></li>
+					<li><a href="Actividades2.html">Actividad 2</a></li>
+					<li><a href="Actividades3.html">Actividad 3</a></li>
 				</ul>
 			</li>
 		</ul>
 	</nav>
-	<section>
+	<section id=principal>
 		<article>		
-		<img id=i1 src="img/computer.png" alt="Programación"/>		
+		<img id=i1 src="img/computer.png" alt="Programación"/>
+			
 			<h2>Objetivo General - Herramienta OVI</h2>
 		<P id=p1>Brindar una herramienta en línea, de fácil navegabilidad, accesibilidad y respuesta, para quienes deseen consultar sobre los conceptos básicos y las etapas necesarias para el desarrollo de software, a través de contenido escrito y multimedia de confiable y veraz procedencia.</P>		
-			<img id=i2 src="img/sanwal.jpg" alt="Fichero"/>			
+			<img id=i2 src="img/sanwal.jpg" alt="Fichero"/>						
 		<h4>Pero... Qué es el desarrollo de software?</h4>
 		<p id=p4>Es una buena pregunta para empezar. Podría ser complejo responderla si queremos; sin embargo, el proceso de creación de un programa de esos que a diario usas en tu computador personal, tablet o smartphone, no se diferencia en mucho al emprendimiento de cualquier proyecto en tu vida.<br /> Es claro que existen ciertos pasos pre-establecidos y algunas reglas que pueden hacer la diferencia entre el éxito y el fracaso, pero lo mas importante es la disciplina y organización que tengas. Aquí aprenderás algunos conceptos básicos. Esperamos que despierten tu interés y sigas descubriendo este maravilloso mundo.</p>
 		</article>		
@@ -61,8 +62,15 @@
 	<p id=p2>
 		Somos estudiantes de la Universidad Nacional abierta y a distancia - UNAD - y pertenecemos al grupo 47 del curso Diseño de Sitios Web. Si quieres conocer un poco mas sobre nosotros pulsa en el siguiente enlace:
 	</p>
-	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a>
-	
+	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a></p>
+
+	<section id= twit align="center"><a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD">Tweets UNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</section>
+
+	<section id=contador align="center"> <script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=d7kj69953bd8msssd6dp989zf6c62uad"></script>
+	<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=d7kj69953bd8msssd6dp989zf6c62uad" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
+	</section>
+
 </aside>
 
 <footer>
@@ -76,4 +84,5 @@
 	<script src="js/prefixfree.min.js"></script>
 	<script src="js/jquery-3.2.0.js"></script>
 	<script src="js/modernizr.js"></script>
+
 </html>
