--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</p>
 	<p align="center"><a id=i href="autores.html">Descubre quienes somos</a></p>
 
-	<section id= twit align="center"><a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD">Tweets UNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<section id= twit align="center"><a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD" height="300">Tweets UNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</section>
 
 	<section id=contador align="center"> <script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=d7kj69953bd8msssd6dp989zf6c62uad"></script>
