--- a/etapas.html
+++ b/etapas.html
@@ -38,9 +38,9 @@
 			</li>
 			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
 				<ul>
-					<li><a href="Actividades1.html">Actividad 1</a></li>
-					<li><a href="Actividades2.html">Actividad 2</a></li>
-					<li><a href="Actividades3.html">Actividad 3</a></li>
+					<li><a href="actividades1.html">Actividad 1</a></li>
+					<li><a href="actividades2.html">Actividad 2</a></li>
+					<li><a href="actividades3.html">Actividad 3</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -50,7 +50,7 @@
 		<h3>Etapas en el desarrollo de Software</h3>
 		<p id=p5>Te presentamos el siguiente material de lectura de nuestra autoría apoyado en el recurso: <br/>El ciclo de vida de un sistema de información. Berzal, F. Recuperado de: http://elvex.ugr.es/idbis/db/docs/lifecycle.pdf%20.</p>
 
-		<div align="center"><iframe src="documents/Etapas.pdf" width="750" height="480"></iframe></div>
+		<div align="center"><iframe src="documents/etapas.pdf" width="750" height="480"></iframe></div>
 		</article>		
 	</section>
 
