--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			</li>
 			<li><a href="#">PRUEBA TUS CONOCIMIENTOS</a>
 				<ul>
-					<li><a href="Actividades1.html">Actividad 1</a></li>
-					<li><a href="Actividades2.html">Actividad 2</a></li>
-					<li><a href="Actividades3.html">Actividad 3</a></li>
+					<li><a href="actividades1.html">Actividad 1</a></li>
+					<li><a href="actividades2.html">Actividad 2</a></li>
+					<li><a href="actividades3.html">Actividad 3</a></li>
 				</ul>
 			</li>
 		</ul>
